# par-wd-solver-bench

./: .gitmodules  CMakeLists.txt  README.md  dump_matrices.cpp  graph.cpp  graph.h  main.cpp  parwdbench.i  solver.cpp  solver.h  vp-tree.h
results/: benchfile-2to20-2cores.txt  benchfile-5to20-12cores.txt  benchfile-5to20-2cores.txt  benchfile-small-2cores.txt  benchfile-small-4cores.txt  benchfile-small.txt  benchfile.txt  benchfile_100-1800n_2-20k_4cores.txt  benchfile_200-10000n_2-20k_12cores.txt  benchfile_200-10000n_2-20k_6cores.txt  benchfile_200-1800n_2-20k_2cores.txt  benchfile_200-1800n_2-20k_6cores.txt  benchfile_6000-8000n_1-7k_12cores.txt  benchfile_6000-8000n_2-8k_2cores.txt  par-wd-results.nb
